--- a/style.css
+++ b/style.css
@@ -86,3 +86,46 @@ h1 {
     color: var(--color-black);
     margin: 4px 0;
   }
+
+  /* Navbar */
+  #navbar {
+    position: fixed;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    background-color: transparent;
+    align-items: center;
+    color: var(--color-white);
+    padding: 16px;
+    transition: all var(--animation-duration) ease-in-out;
+    z-index: 1;
+  }
+
+  #navbar.navbar--dark { 
+    background-color: var(--color-blue);
+    padding: 8px;
+  }
+
+  .logo {
+      width: var(--font-medium);
+  }
+
+  .navbar__menu {
+    display: flex;
+  }
+
+  .navbar__menu__item {
+    padding: 8px 12px;
+    margin: 0 4px;
+    cursor: pointer;
+    border: 1px solid transparent;
+    border-radius: var(--size-border-radius);
+  }
+  
+  .navbar__menu__item.active {
+    border: 1px solid var(--color-white);
+  }
+  
+  .navbar__menu__item:hover {
+    background-color: var(--color-dark-blue);
+  }
