--- a/style.css
+++ b/style.css
@@ -171,10 +171,29 @@ h1 {
   }
 
   .title {
-      width: 30%;
+      width: 300px;
   }
 
   .content {
-      width: 70%;
+      width: 700px;
       text-align: left;
   }
+
+  /* Skills */
+  .skill {
+      width: 700px;
+  }
+
+  .skill__bar {
+    width: 100%;
+    height: 30px;
+    background-color: var(--color-grey);
+    border-radius: 30px;
+  }
+
+  .skill__value {
+    height: 30px;
+    background-color: var(--color-blue);
+    border-radius: 30px;
+  }
+
