--- a/style.css
+++ b/style.css
@@ -1,199 +1,316 @@
 /* Global */
 :root {
-    /* Color */
-    --color-white: #ffffff;
-    --color-light-white: #eeeeee;
-    --color-dark-white: #bdbdbd;
-    --color-black: #000000;
-    --color-dark-grey: #4d4d4d;
-    --color-grey: #616161;
-    --color-light-grey: #7d7979;
-    --color-blue: #73aace;
-    --color-dark-blue: #1e4572;
-    --color-green: #a1d7be;
-    --color-yellow: #fff7d1;
-    --color-orange: #feb546;
-  
-    /* Font size */
-    --font-large: 48px;
-    --font-medium: 28px;
-    --font-regular: 18px;
-    --font-small: 16px;
-    --font-micro: 14px;
-  
-    /* Font weight */
-    --weight-bold: 700;
-    --weight-semi-bold: 600;
-    --weight-regular: 400;
-  
-    /* Size */
-    --size-border-radius: 4px;
-  
-    /* Annimation */
-    --animation-duration: 300ms;
-  }
+  /* Color */
+  --color-white: #ffffff;
+  --color-light-white: #eeeeee;
+  --color-dark-white: #bdbdbd;
+  --color-black: #000000;
+  --color-dark-grey: #4d4d4d;
+  --color-grey: #616161;
+  --color-light-grey: #7d7979;
+  --color-blue: #73aace;
+  --color-dark-blue: #1e4572;
+  --color-green: #a1d7be;
+  --color-yellow: #fff7d1;
+  --color-orange: #feb546;
 
-  /* Universal tags */
+  /* Font size */
+  --font-large: 48px;
+  --font-medium: 28px;
+  --font-regular: 18px;
+  --font-small: 16px;
+  --font-micro: 14px;
+
+  /* Font weight */
+  --weight-bold: 700;
+  --weight-semi-bold: 600;
+  --weight-regular: 400;
+
+  /* Size */
+  --size-border-radius: 4px;
+
+  /* Annimation */
+  --animation-duration: 300ms;
+}
+
+/* Universal tags */
 * {
-    box-sizing: border-box;
-  }
+  box-sizing: border-box;
+}
 
-  body {
-    margin: 0;
-    font-family: "Open Sans", sans-serif;
-  }a {
-    text-decoration: none;
-    color: var(--color-white);
-  }
-  
-  ul {
-    list-style: none;
-    padding-left: 0;
-  }
-  
-  button {
-    background-color: transparent;
-    cursor: pointer;
-    border: none;
-    outline: none;
-  }
+body {
+  margin: 0;
+  font-family: "Open Sans", sans-serif;
+}
+a {
+  text-decoration: none;
+  color: var(--color-white);
+}
 
-  /* Typography */
+ul {
+  list-style: none;
+  padding-left: 0;
+}
+
+button {
+  background-color: transparent;
+  cursor: pointer;
+  border: none;
+  outline: none;
+}
+
+/* Typography */
 h1 {
-    font-size: var(--font-large);
-    font-weight: var(--weight-bold);
-    color: var(--color-black);
-    margin: 16px 0;
-  }
-  
-  h2 {
-    font-size: var(--font-medium);
-    font-weight: var(--weight-semi-bold);
-    color: var(--color-black);
-    margin: 8px 0;
-  }
-  
-  h3 {
-    font-size: var(--font-regular);
-    font-weight: var(--weight-regular);
-    color: var(--color-black);
-    margin: 8px 0;
-  }
-  
-  p {
-    font-size: var(--font-regular);
-    font-weight: var(--weight-regular);
-    color: var(--color-black);
-    margin: 4px 0;
-  }
+  font-size: var(--font-large);
+  font-weight: var(--weight-bold);
+  color: var(--color-black);
+  margin: 16px 0;
+}
 
-  /* Navbar */
-  #navbar {
-    position: fixed;
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    background-color: transparent;
-    align-items: center;
-    color: var(--color-white);
-    padding: 16px;
-    transition: all var(--animation-duration) ease-in-out;
-    z-index: 1;
-  }
+h2 {
+  font-size: var(--font-medium);
+  font-weight: var(--weight-semi-bold);
+  color: var(--color-black);
+  margin: 8px 0;
+}
 
-  #navbar.navbar--dark { 
-    background-color: var(--color-blue);
-    padding: 8px;
-  }
+h3 {
+  font-size: var(--font-regular);
+  font-weight: var(--weight-regular);
+  color: var(--color-black);
+  margin: 8px 0;
+}
 
-  .logo {
-      width: var(--font-medium);
-  }
+p {
+  font-size: var(--font-regular);
+  font-weight: var(--weight-regular);
+  color: var(--color-black);
+  margin: 4px 0;
+}
 
-  .navbar__menu {
-    display: flex;
-  }
+/* Navbar */
+#navbar {
+  position: fixed;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  background-color: transparent;
+  align-items: center;
+  color: var(--color-white);
+  padding: 16px;
+  transition: all var(--animation-duration) ease-in-out;
+  z-index: 1;
+}
 
-  .navbar__menu__item {
-    padding: 8px 12px;
-    margin: 0 4px;
-    cursor: pointer;
-    border: 1px solid transparent;
-    border-radius: var(--size-border-radius);
-  }
-  
-  .navbar__menu__item.active {
-    border: 1px solid var(--color-white);
-  }
-  
-  .navbar__menu__item:hover {
-    background-color: var(--color-dark-blue);
-  }
+#navbar.navbar--dark {
+  background-color: var(--color-blue);
+  padding: 8px;
+}
 
-  /* Home */
-  #home {
-      background: url("imgs/background.png")
-      center/cover
-      no-repeat;
-      padding: 40px;
-      padding-top: 120px;
-      text-align: center;
-  }
+.logo {
+  width: var(--font-medium);
+}
 
-  .home__profile {
-      width: 250px;
-      height: 250px;
-      border-radius: 50%;
-      border: 2px solid var(--color-light-white);
-  }
+.navbar__menu {
+  display: flex;
+}
 
-  .home__tilte,
-  .home__description {
-      color: var(--color-white);
-  }
+.navbar__menu__item {
+  padding: 8px 12px;
+  margin: 0 4px;
+  cursor: pointer;
+  border: 1px solid transparent;
+  border-radius: var(--size-border-radius);
+}
 
-  /* Section */
-  .section {
-    padding: 50px;
-    text-align: center;
-    margin: auto;
-  }
+.navbar__menu__item.active {
+  border: 1px solid var(--color-white);
+}
 
-  .section__container {
-    max-width: 1200px;
-    margin: auto;
-  }
+.navbar__menu__item:hover {
+  background-color: var(--color-dark-blue);
+}
 
-  .container {
-    display: flex;
-    margin: 80px 0;
-    align-items: flex-start;
-  }
+/* Home */
+#home {
+  background: url("imgs/background.png") center/cover no-repeat;
+  padding: 40px;
+  padding-top: 120px;
+  text-align: center;
+}
 
-  .title {
-      width: 300px;
-  }
+.home__profile {
+  width: 250px;
+  height: 250px;
+  border-radius: 50%;
+  border: 2px solid var(--color-light-white);
+}
 
-  .content {
-      width: 700px;
-      text-align: left;
-  }
+.home__tilte,
+.home__description {
+  color: var(--color-white);
+}
 
-  /* Skills */
-  .skill {
-      width: 700px;
-  }
+/* Section */
+.section {
+  padding: 50px;
+  text-align: center;
+  margin: auto;
+}
 
-  .skill__bar {
-    width: 100%;
-    height: 30px;
-    background-color: var(--color-grey);
-    border-radius: 30px;
-  }
+.section__container {
+  max-width: 1200px;
+  margin: auto;
+}
 
-  .skill__value {
-    height: 30px;
-    background-color: var(--color-blue);
-    border-radius: 30px;
-  }
+.container {
+  display: flex;
+  margin: 80px 0;
+  align-items: flex-start;
+}
 
+.title {
+  width: 300px;
+}
+
+.content {
+  width: 700px;
+  text-align: left;
+}
+
+/* Skills */
+.skill {
+  width: 700px;
+}
+
+.skill__bar {
+  width: 100%;
+  height: 30px;
+  background-color: var(--color-grey);
+  border-radius: 30px;
+}
+
+.skill__value {
+  height: 30px;
+  background-color: var(--color-blue);
+  border-radius: 30px;
+}
+
+/* Portfolio */
+#portfolio {
+  background-color: var(--color-yellow);
+}
+
+.portfolio__categories {
+  margin: 40px;
+}
+
+.category__btn {
+  border: 1px solid var(--color-dark-white);
+  border-radius: var(--size-border-radius);
+  font-size: var(--font-regular);
+  padding: 8px 48px;
+  position: relative;
+}
+
+.category__btn.selected,
+.category__btn:hover {
+  background-color: var(--color-dark-blue);
+  color: var(--color-white);
+}
+
+.portfolio__project {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  opacity: 1;
+  transition: all var(--animation-duration) ease-out;
+}
+
+.portfolio__project .anim-out {
+  opacity: 0;
+  transform: scale(0.96) translateY(40px);
+}
+
+.project {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 280px;
+  height: 250px;
+  margin: 2px;
+}
+
+.project.invisible {
+  display: none;
+}
+
+.project__img {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.project__description {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: var(--color-black);
+  border-radius: 30px;
+  opacity: 0;
+  transform: translateY(10px);
+  transition: all var(--animation-duration) ease-in;
+}
+
+.btn {
+  display: inline-block;
+  text-align: center;
+  margin-top: 20px;
+}
+
+.project__btn {
+  display: inline-block;
+  text-align: center;
+  flex-direction: row;
+  background-color: var(--color-blue);
+  color: var(--color-white);
+  width: 50px;
+  height: 40px;
+  line-height: 40px;
+  border-radius: var(--size-border-radius);
+  margin: 4px 0;
+}
+
+.project__btn:hover {
+  background-color: var(--color-dark-blue);
+}
+
+.project:hover .project__description {
+  opacity: 0.8;
+  transform: translateY(0px);
+}
+
+.project__description h3 {
+  color: var(--color-orange);
+}
+
+.project__description span {
+  color: var(--color-white);
+}
+
+.project__description h3:after {
+  content: "";
+  display: block;
+  position: relative;
+  left: 50%;
+  width: 50px;
+  height: 2px;
+  transform: translateX(-50%);
+  margin-top: 8px;
+  background-color: var(--color-dark-white);
+}
