--- a/style.css
+++ b/style.css
@@ -314,3 +314,54 @@ p {
   margin-top: 8px;
   background-color: var(--color-dark-white);
 }
+
+/* FAQ */
+
+#faq .content .faq__list {
+  width: 100%;
+  border-top: 3px solid var(--color-blue);
+  margin-top: 30px;
+}
+
+.faq__list__item .question {
+  height: 65px;
+  padding-left: 16px;
+  padding-right: 36px;
+  line-height: 65px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  background-image: url(imgs/downicon.png);
+  background-repeat: no-repeat;
+  background-position-x: calc(100% - 13px);
+  background-position-y: center;
+  cursor: pointer;
+  border-bottom: 1px solid var(--color-dark-white);
+  margin: 0px;
+}
+
+.faq__list__item.on .question {
+  color: var(--color-blue);
+  font-weight: var(--weight-semi-bold);
+  letter-spacing: -0.1px;
+  background-image: url(imgs/upicon.png);
+}
+
+.faq__list__item .answer {
+  width: 100%;
+  height: 0;
+  padding: 0 40px 0;
+  overflow: hidden;
+  line-height: 1.86;
+  box-sizing: border-box;
+  border-color: transparent;
+  background-color: var(--color-light-white);
+  transition: all 0.3s;
+}
+
+.faq__list__item.on .answer {
+  height: auto;
+  padding: 40px 40px 45px;
+  transition: all 0.3s;
+  border-bottom: 1px solid var(--color-dark-white);
+}
