--- a/style.css
+++ b/style.css
@@ -176,6 +176,7 @@ p {
 .content {
   width: 700px;
   text-align: left;
+  padding-top: 10px;
 }
 
 /* Skills */
@@ -320,7 +321,6 @@ p {
 #faq .content .faq__list {
   width: 100%;
   border-top: 3px solid var(--color-blue);
-  margin-top: 30px;
 }
 
 .faq__list__item .question {
@@ -364,4 +364,31 @@ p {
   padding: 40px 40px 45px;
   transition: all 0.3s;
   border-bottom: 1px solid var(--color-dark-white);
+}
+
+/* Contact */
+#contact {
+  background-color: var(--color-light-white);
+}
+
+#contact .section .container {
+  margin: 0px;
+}
+
+#contact .content {
+  line-height: 1.86;
+}
+
+#contact h3 {
+  font-weight: var(--weight-semi-bold);
+}
+
+#contact p {
+  padding-left: 40px;
+}
+
+#contact a {
+  color: var(--color-black);
+  font-size: var(--font-medium);
+  padding-right: 20px;
 }
