--- a/style.css
+++ b/style.css
@@ -415,3 +415,77 @@ footer .section {
 .copyrights {
   color: var(--color-white);
 }
+
+
+/* For below 768px screen width */
+@media screen and (max-width: 768px) {
+:root {
+  /* Font size */
+  --font-large: 30px;
+  --font-medium: 18px;
+  --font-regular: 16px;
+  --font-small: 14px;
+  --font-micro: 12px;
+}
+
+/* Navbar */
+.navbar__toggle-btn {
+  display: block;
+  top: 16px;
+  right: 16px;
+  font-size: var(--font-medium);
+}
+
+#navbar.navbar--dark {
+  padding: 16px;
+}
+
+.navbar__menu {
+  flex-direction: column;
+  text-align: center;
+  width: 100%;
+  display: none;
+}
+
+.navbar__menu.open {
+  display: block;
+}
+
+/* Section */
+.section {
+  padding: 50px;
+  padding-top: 50px;
+}
+
+.container {
+  flex-direction: column;
+}
+
+.title, 
+.content {
+  width: 100%;
+}
+
+/* Home */
+.home__profile {
+  width: 200px;
+  height: 200px;
+}
+
+/* skills */
+.skill {
+  width: 100%;
+}
+
+.skill__bar {
+  width: 100%;
+  height: 30px;
+  background-color: var(--color-grey);
+  border-radius: 30px;
+}
+
+.skill__value {
+  height: 30px;
+  background-color: var(--color-light-blue);
+  border-radius: 30px;
+}
