--- a/style.css
+++ b/style.css
@@ -420,6 +420,27 @@ footer .section {
   color: var(--color-white);
 }
 
+/* Scroll */
+.arrow-up {
+  position: fixed;
+  bottom: 50px;
+  right: 50px;
+  width: 70px;
+  height: 70px;
+  font-size: 50px;
+  color: var(--color-white);
+  background-color: var(--color-light-blue);
+  border-radius: 50%;
+  opacity: 0;
+  pointer-events: none;
+  transition: all var(--animation-duration) ease-in;
+}
+
+.arrow-up.visible {
+  opacity: 1;
+  pointer-events: auto;
+}
+
 
 /* For below 768px screen width */
 @media screen and (max-width: 768px) {
@@ -498,4 +519,13 @@ footer .section {
   height: 30px;
   background-color: var(--color-light-blue);
   border-radius: 30px;
+}
+
+.arrow-up {
+  width: 50px;
+  height: 50px;
+  font-size: 30px;
+  line-height: 50px;
+  right: 16px;
+  bottom: 16px;
 }
