--- a/style.css
+++ b/style.css
@@ -365,21 +365,18 @@ p {
 
 .faq__list__item .answer {
   width: 100%;
-  height: 0;
-  padding: 0 40px 0;
-  overflow: hidden;
+  display: none;
   line-height: 1.86;
   box-sizing: border-box;
   border-color: transparent;
   background-color: var(--color-light-white);
-  transition: all 0.3s;
+  height: auto;
+  padding: 40px 40px 45px;
+  border-bottom: 1px solid var(--color-dark-white);
 }
 
 .faq__list__item.on .answer {
-  height: auto;
-  padding: 40px 40px 45px;
-  transition: all 0.3s;
-  border-bottom: 1px solid var(--color-dark-white);
+  display: flex;
 }
 
 /* Contact */
